@@ -37,8 +37,9 @@ public class App {
                 String checkStr = "";
                 if (index != 0 && index != contentFile.size() - 1) {
                     for (int j = 0; j < nIndex.length; j++) {
+                        checkStr="";
                         int nLenght = numbers.get(j).toCharArray().length;
-                        System.out.println(x.length()-1 + "-"+ index +"-"+ nIndex[j]);
+                       
                         if (nIndex[j] != 0 && nIndex[j] != x.length()-1 && nIndex[j] <= x.length() - (nLenght + 1)) {
                             checkStr = contentFile.get(index - 1).substring(nIndex[j] - 1, nIndex[j] + nLenght + 1) +
                                     x.substring(nIndex[j] - 1, nIndex[j] + nLenght + 1) +
@@ -50,13 +51,9 @@ public class App {
                                     contentFile.get(index + 1).substring(nIndex[j], nIndex[j] + nLenght + 1);
                                     
                         }else if(nIndex[j] == x.length()-1){
-                            checkStr = contentFile.get(index - 1).substring(nIndex[j]-1, nIndex[j]) +
-                                    x.substring(nIndex[j], nIndex[j]-1 + nLenght) +
+                            checkStr = contentFile.get(index - 1).substring(nIndex[j]-1, nIndex[j]+1) +
+                                    x.substring(nIndex[j]-1, nIndex[j]+1) +
                                     contentFile.get(index + 1).substring(nIndex[j]-1, nIndex[j] + 1);
-
-                                    System.out.println(contentFile.get(index - 1).substring(nIndex[j]-1, nIndex[j]) + "\n" +
-                                    x.substring(nIndex[j], nIndex[j]-1 + nLenght) + "\n" +
-                                    contentFile.get(index + 1).substring(nIndex[j]-1, nIndex[j] + 1) + "\n\n");
 
                         } else if (nIndex[j] > x.length() - (nLenght + 1)) {
                             checkStr = contentFile.get(index - 1).substring(nIndex[j] - 1, nIndex[j] + nLenght) +
@@ -70,6 +67,7 @@ public class App {
                     }
                 } else if (index == 0) {
                     for (int j = 0; j < nIndex.length; j++) {
+                        checkStr="";
                         int nLenght = numbers.get(j).toCharArray().length;
                         if (nIndex[j] != 0 && nIndex[j] != x.length() && nIndex[j] <= x.length() - (nLenght + 1)) {
                             checkStr = x.substring(nIndex[j] - 1, nIndex[j] + nLenght + 1) +
@@ -78,8 +76,12 @@ public class App {
                         } else if (nIndex[j] == 0) {
                             checkStr = x.substring(nIndex[j], nIndex[j] + nLenght + 1) +
                                     contentFile.get(index + 1).substring(nIndex[j], nIndex[j] + nLenght + 1);
-                                    
-                        } else if (nIndex[j] > x.length() - (nLenght + 1)) {
+
+                        }else if(nIndex[j] == x.length()-1){
+                            checkStr = x.substring(nIndex[j]-1, nIndex[j]+1) +
+                                    contentFile.get(index + 1).substring(nIndex[j]-1, nIndex[j]+1);
+
+                        }else if (nIndex[j] > x.length() - (nLenght + 1)) {
                             checkStr = x.substring(nIndex[j] - 1, nIndex[j] + nLenght) +
                                     contentFile.get(index + 1).substring(nIndex[j] - 1, nIndex[j] + nLenght);
 
@@ -90,6 +92,7 @@ public class App {
                     }
                 } else if (index == contentFile.size() - 1) {
                     for (int j = 0; j < nIndex.length; j++) {
+                        checkStr="";
                         int nLenght = numbers.get(j).toCharArray().length;
                         if (nIndex[j] != 0 && nIndex[j] != x.length() && nIndex[j] <= x.length() - (nLenght + 1)) {
                             checkStr = contentFile.get(index - 1).substring(nIndex[j] - 1, nIndex[j] + nLenght + 1) +
@@ -97,7 +100,10 @@ public class App {
                         } else if (nIndex[j] == 0) {
                             checkStr = contentFile.get(index - 1).substring(nIndex[j], nIndex[j] + nLenght + 1) +
                                     x.substring(nIndex[j], nIndex[j] + nLenght + 1);
-
+                        }else if(nIndex[j] == x.length()-1){
+                            checkStr = x.substring(nIndex[j]-1, nIndex[j]) +
+                                    contentFile.get(index -1).substring(nIndex[j]-1, nIndex[j]);
+                            System.out.println(checkStr);
                         } else if (nIndex[j] > x.length() - (nLenght + 1)) {
                             checkStr = contentFile.get(index - 1).substring(nIndex[j] - 1, nIndex[j] + nLenght) +
                                     x.substring(nIndex[j] - 1, nIndex[j] + nLenght);
@@ -107,7 +113,6 @@ public class App {
                         }
                     }
                 }
-                System.out.println();
             });
         System.out.println(result.get());
     }
@@ -118,7 +123,7 @@ public class App {
             int cnt = 0;
             int index = x.indexOf(n);
             if(!nIndex.isEmpty()){
-                while(index < nIndex.getLast()){
+                while(index != -1 && !nIndex.isEmpty() && index < nIndex.get(nIndex.size() - 1)){
                     cnt++;
                     index = x.indexOf(n, cnt);
                  }
